# robocompdsl

./: CDSL.xtext  CMakeLists.txt  IDSL.xtext  README.md  idlParse.py  index.html  params.json  parseCDSL.py  parseIDSL.py  robocompdsl.py  testParsing.sh
cdslTests/: AprilTags.cdsl  Nuc2inner.cdsl  aprilbasedlocalization.cdsl  navigation.cdsl  object.cdsl
dd/: robocompdsl.py
idslTests/: IMU.idsl  RGBDBus.idsl
templateCPP/: CMakeLists.txt  DoxyFile  SERVANT.CPP  SERVANT.H  main.cpp
templateCPP/etc/: config
templateCPP/src/: CMakeLists.txt  config.h  genericworker.h  main.cpp  mainUI.ui
templatePython/: CMakeLists.txt  SERVANT.PY
templatePython/etc/: config
templatePython/src/: genericworker.py  main.py  specificworker.py  speechComp.py
